<?xml version="1.0"?>
<package>

  <name>aioros_bridge</name>
  <version>0.1.0</version>
  <description>ASGI ROS Bridge based on aioros</description>

  <author>Markus Grimm</author>
  <maintainer email="grimm.markus@gmail.com">Markus Grimm</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>aioros</run_depend>
  <run_depend>python3-starlette</run_depend>
  <run_depend>python3-sse-starlette</run_depend>
  <run_depend>python3-uvicorn</run_depend>

  <export />

</package>
