<?xml version="1.0"?>
<package>

  <name>aioros_bridge</name>
  <version>0.1.0</version>
  <description>ASGI ROS Bridge based on aioros</description>

  <author>Markus Grimm</author>
  <maintainer email="grimm.markus@gmail.com">Markus Grimm</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>python3-starlette</run_depend>
  <run_depend>python3-sse-starlette</run_depend>
  <run_depend>python3-uvicorn</run_depend>

  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-requests</test_depend>
  <test_depend>std_msgs</test_depend>
  <test_depend>std_srvs</test_depend>

  <export />

</package>
